careride_frontend/deploy/test/service-careride-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: careride-front
  namespace: default
spec:
  selector:
    app: careride-front
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
